2005-06-21  Donal K. Fellows  <dkf@users.sf.net>

	* doc/GetBitmap.3: Fix silly error in SYNOPSIS. [Bug 1224983]

2005-06-19  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkImgGIF.c: Cleanse all static (i.e. non-thread-safe) data
	at a miniscule performance hit.

2005-06-18  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/Makefile: for X11 build, add -X11 suffix to unversioned wish
	symbolic link.

	* unix/tcl.m4 (Darwin): add -headerpad_max_install_names to LDFLAGS to
	ensure we can always relocate binaries with install_name_tool.

	* unix/configure: autoconf-2.59

2005-06-07  Donal K. Fellows  <donal.k.fellows@manchester.ac.uk>

	Bump patchlevel to a4 to distinguish from a3 release.

2005-06-04  Jeff Hobbs  <jeffh@ActiveState.com>

	*** 8.5a3 TAGGED FOR RELEASE ***

2005-06-02  Jim Ingham  <jingham@apple.com>

	* generic/tkEvent.c (InvokeFocusHandlers): On Mac OS X the
	scrollwheel events are sent to the window under the mouse,
	not to the focus window.
	
	Another patch from M. Kirkham.

	* macosx/tkMacOSXScrlbr.c (ThumbActionProc, ScrollBarBindProc):
	Record the first mouse down point, and compute differences from
	that, rather than getting the mouse down each time through the
	loop.  The old method would get fooled if you moved the mouse less
	than a text line height in the text widget.
	[Bug 1083728]

2005-06-03  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/Makefile: fixed 'embedded' target.

2005-06-02  Reinhard Max  <max@suse.de>

	* unix/tkUnix.c (Tk_GetUserInactiveTime): Improvements to get it
	working on Solaris, and panic if we run out of memory.
	* unix/configure.in: Rework the searching for Xss, to make it work
	on Solaris and provide more useful output. Use AC_HELP_STRING
	where appropriate.
	* unix/tcl.m4: synced from Tcl.
	* unix/configure: regenerated with autoconf 2.59.
	
2005-06-01  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/tkWinInt.h: added private decls of Tk_GetEmbeddedMenuHWND,