@@ -1,3 +1,9 @@
+2005-06-23  Daniel Steffen  <das@users.sourceforge.net>
+
+	* macosx/tkMacOSXDefault.h: change ENTRY_BORDER defaults to from 5 to 2
+	to make default entry widgets in TkAqua look like in other aqua apps
+	(and have same border dimensions as other platforms). [Bug 1176610]
+
 2005-06-21  Donal K. Fellows  <dkf@users.sf.net>
 
 	* doc/GetBitmap.3: Fix silly error in SYNOPSIS. [Bug 1224983]
